--- a/server/package.json
+++ b/server/package.json
@@ -3,21 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "/dist/server.js",
+  "types": "dist/server.d.ts",
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^3.6.6",
-    "semiatypes": "file:../shared/semiatypes",
+    "semiaclient": "file:../client",
     "socket.io": "^4.0.2",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "type": "module",
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^15.0.2",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.4"
   },
+  "note": {
+    "1": "--experimental-specifier-resolution=node mandatory to be able to import all libs"
+  },
   "scripts": {
-    "dev": "tsc-watch  --watch --onCompilationComplete  \"node --experimental-specifier-resolution=node ./dist/server.js\""
+    "dev": "tsc-watch --watch --onCompilationComplete  \"node --experimental-specifier-resolution=node ./dist/server.js\"",
+    "build": "npx tsc",
+    "start": "node --experimental-specifier-resolution=node ./dist/server.js"
   },
   "author": "Libor Matasek",
   "license": "ISC"
