--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^4.1.2",
     "svelte-navigator": "^3.1.5",
     "sveltik": "^0.1.16",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   }
 }
