--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.12",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^15.0.2",
+    "@types/uuid": "^8.3.0",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.4"
   },
