--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **/node_modules/
 .idea/
 .devcontainer/
-/server/public/
+/server/public/uploads/*
+!/server/public/uploads/.gitthisfolder.txt
 /server/dist/
